Removed non-final static  vars from java code (#3)
* Removed non-final static  vars from java code

* Fixed C tests (unsupported GCC _Float128 extension)

Co-authored-by: Mikhail Zhigun <Mikhail.Zhigun@meteoswiss.ch>